2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-decode-anchor-string): New alias to
	w3m-decode-anchor-string.
	(shimbun-mime-replace-image-tags): Use it to decode "&amp;" to "&" in
	url string.

	* sb-pocketgames.el (shimbun-get-headers): Use
	shimbun-decode-anchor-string instead of w3m-decode-anchor-string.

2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Update regexp.

2008-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yomiuri.el (shimbun-yomiuri-prepare-article): Remove javascripts.

2008-01-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-next-url, shimbun-make-contents):
	Remove.
	(shimbun-multi-next-url): Do.

	* sb-sankei.el (shimbun-sankei-retry-fetching): New variable.

2007-12-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-slashdot-jp.el (shimbun-rss-build-message-id): Relax a
	regular expression to detect message-id basis.

2007-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Remove useless links.

2007-12-05  NOMIYA Masaru  <nomiya@galaxy.dti.ne.jp>,
	    Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-nikkei-group-table): Update index urls and
	functions to get headers and to prepare articles for the groups
	kokunai, markets, kawase, kinri, ft, dj, ngyoseki, gyosuuchi, and
	gyoseki.
	(shimbun-nikkei-make-date-string): Enable it to adjust the day of month
	according to the new optional argument adj.
	(shimbun-nikkei-get-headers-stock)
	(shimbun-nikkei-get-headers-gyosuuchi): New functions.
	(shimbun-nikkei-get-headers-markets)
	(shimbun-nikkei-get-headers-kawase)
	(shimbun-nikkei-get-headers-bunkatsu2)
	(shimbun-nikkei-get-headers-kinri, shimbun-nikkei-get-headers-gyoseki)
	(shimbun-nikkei-prepare-article-default3)
	(shimbun-nikkei-prepare-article-bunkatsu2): Abolish.
	(shimbun-nikkei-get-headers-ft, shimbun-nikkei-get-headers-dj)
	(shimbun-nikkei-prepare-article-default4): Update regexp.
