@@ -1,3 +1,8 @@
+2008-01-18  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-mainichi.el (shimbun-mainichi-clear-contents): Add Japanese title
+	and words to articles in weekly group.
+
 2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun.el (shimbun-decode-anchor-string): New alias to
